--- a/packages/ui/src/assets/styles/components/_button.scss
+++ b/packages/ui/src/assets/styles/components/_button.scss
@@ -1,19 +1,39 @@
 .p-button {
+  $root: &;
+
   @apply relative inline-flex items-center justify-center;
   @apply border border-solid border-transparent rounded;
   @apply cursor-pointer no-underline font-bold;
 
+  &__loader {
+    @apply absolute size-4 border-2 border-solid rounded-full !border-r-transparent;
+    @apply border-[currentColor];
+    @apply animate-spin;
+  }
+
   // Variants
   &--primary {
     @apply bg-primary-500 text-white;
+
+    #{$root}__loader {
+      @apply text-white;
+    }
   }
 
   &--default {
     @apply bg-transparent text-gray-500 border-gray-300;
+
+    #{$root}__loader {
+      @apply text-gray-500;
+    }
   }
 
   &--error {
     @apply bg-error-500 text-white;
+
+    #{$root}__loader {
+      @apply text-white;
+    }
   }
 
   // Sizes
@@ -48,20 +68,8 @@
     @apply relative text-transparent;
   }
 
-  &:disabled:not(#{&}--loading),
-  &--disabled:not(#{&}--loading) {
+  &:disabled:not(:is(#{&}--loading)),
+  &--disabled:not(:is(#{&}--loading)) {
     @apply opacity-50;
-  }
-
-  &__loader {
-    @apply absolute size-4 border-2 border-solid rounded-full !border-r-transparent;
-    @apply border-white;
-    animation: button-loader-spin 0.75s linear infinite;
-  }
-
-  @keyframes button-loader-spin {
-    to {
-      transform: rotate(360deg);
-    }
   }
 }
