refactor: remove tailwindcss dependency from the ui styles

--- a/packages/ui/src/assets/styles/main.scss
+++ b/packages/ui/src/assets/styles/main.scss
@@ -1,9 +1,11 @@
 @tailwind utilities;
 
 // Abstracts
+@import "abstracts/variables";
 @import "abstracts/keyframes";
 
 // Base
+@import "base/root";
 @import "base/reset";
 @import "base/base";
 
