--- a/packages/ui/src/assets/styles/components/_button.scss
+++ b/packages/ui/src/assets/styles/components/_button.scss
@@ -1,75 +1,126 @@
 .p-button {
   $root: &;
 
-  @apply relative inline-flex items-center justify-center;
-  @apply border border-solid border-transparent rounded;
-  @apply cursor-pointer no-underline font-bold;
+  --rounded-default: #{$rounded-md};
+  --rounded-pill: #{$rounded-full};
+  // Default Colors
+  --bg-default: transparent;
+  --fg-default: rgb(#{$color-gray-500});
+  --border-default: rgb(#{$color-gray-300});
+  // Primary Colors
+  --bg-primary: rgb(#{$color-primary-500});
+  --fg-primary: white;
+  // Error Colors
+  --bg-error: rgb(#{$color-error-500});
+  --fg-error: white;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid transparent;
+  text-decoration: none;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: var(--rounded-default);
 
   &__loader {
-    @apply absolute size-4 border-2 border-solid rounded-full !border-r-transparent;
-    @apply border-[currentColor];
-    @apply animate-spin;
-  }
-
-  // Variants
-  &--primary {
-    @apply bg-primary-500 text-white;
-
-    #{$root}__loader {
-      @apply text-white;
-    }
-  }
-
-  &--default {
-    @apply bg-transparent text-gray-500 border-gray-300;
-
-    #{$root}__loader {
-      @apply text-gray-500;
-    }
-  }
-
-  &--error {
-    @apply bg-error-500 text-white;
-
-    #{$root}__loader {
-      @apply text-white;
-    }
-  }
-
-  // Sizes
-  &--sm {
-    @apply py-1 px-2 text-sm leading-4;
-  }
-
-  &--md {
-    @apply py-2 px-3 text-base leading-5;
-  }
-
-  &--lg {
-    @apply py-3 px-4 text-lg leading-6;
-  }
-
-  &--xl {
-    @apply py-4 px-5 text-xl leading-7;
-  }
-
-  // Pill
-  &--pill {
-    @apply rounded-full;
+    position: absolute;
+    width: 1rem;
+    height: 1rem;
+    border: 2px solid currentColor;
+    border-right-color: transparent;
+    animation: spin 1s linear infinite;
+    border-radius: var(--rounded-pill);
   }
 
   // States
   &:disabled,
   &--disabled {
-    @apply cursor-not-allowed;
+    cursor: not-allowed;
+
+    &:not(:is(#{$root}--loading)) {
+      opacity: 0.5;
+    }
   }
 
   &--loading {
-    @apply relative text-transparent;
+    position: relative;
+    color: transparent !important;
+    opacity: 0.875;
   }
 
-  &:disabled:not(:is(#{&}--loading)),
-  &--disabled:not(:is(#{&}--loading)) {
-    @apply opacity-50;
+  // Variants
+  &--primary {
+    background-color: var(--bg-primary);
+    color: var(--fg-primary);
+
+    #{$root}__loader {
+      color: var(--fg-primary);
+    }
+  }
+
+  &--default {
+    background-color: var(--bg-default);
+    color: var(--fg-default);
+    border-color: var(--border-default);
+
+    #{$root}__loader {
+      color: var(--fg-default);
+    }
+  }
+
+  &--error {
+    background-color: var(--bg-error);
+    color: var(--fg-error);
+
+    #{$root}__loader {
+      color: var(--fg-error);
+    }
+  }
+
+  // Sizes
+  &--sm {
+    padding-block: 0.5rem;
+    padding-inline: 0.75rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    gap: 0.25rem;
+  }
+
+  &--md {
+    padding-block: 0.625rem;
+    padding-inline: 0.875rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    gap: 0.25rem;
+  }
+
+  &--lg {
+    padding-block: 0.625rem;
+    padding-inline: 1rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    gap: 0.375rem;
+  }
+
+  &--xl {
+    padding-block: 0.75rem;
+    padding-inline: 1.125rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    gap: 0.375rem;
+  }
+
+  &--2xl {
+    padding-block: 1rem;
+    padding-inline: 1.375rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    gap: 0.625rem;
+  }
+
+  // Pill
+  &--pill {
+    border-radius: var(--rounded-pill);
   }
 }
