Refactor UI package, configs, and nuxt client app (#1)
* feat: nuxt client app implementation

* feat: nuxt type checking, ui components relocation, clean up

* refactor: remove unnecessary "publishConfig" from tsconfig/package.json

* chore: updates

- bump package versions
- add missing types
- refactor ui styles

* refactor: update button component

- implement `radix-vue` Primitive
- update button story
- update button styles and loading state

* fix: button border style

* chore update story settings

* chore: add .editorconfig and update button component styles

* refactor: remove unused import in main.ts

* refactor: update build and development scripts in package.json

* refactor: update sass version in package.json

* refactor: remove `asChild` prop from `Button` component

* refactor: remove tailwindcss dependency from the ui styles

* refactor: button styling and component props

- implement css variables for button
- update related button implementation

BREAKING: `Button` component's default size is now `base`, and variant is `default`.

* refactor: update tailwind config, text color in home page paragraph in client app

--- a/packages/ui/src/assets/styles/main.scss
+++ b/packages/ui/src/assets/styles/main.scss
@@ -1,6 +1,15 @@
-@tailwind base;
-@tailwind components;
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+
 @tailwind utilities;
 
-@import "./reset.scss";
-@import "./base.scss";
+// Abstracts
+@import "abstracts/variables";
+@import "abstracts/keyframes";
+
+// Base
+@import "base/root";
+@import "base/reset";
+@import "base/base";
+
+// Components
+@import "components/button";
