--- a/apps/client/assets/styles/main.scss
+++ b/apps/client/assets/styles/main.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");
+@import url("@acme/ui/main.scss");
 
 body {
   font-family: "DM Sans", system-ui;
