--- a/packages/ui/src/assets/styles/components/_button.scss
+++ b/packages/ui/src/assets/styles/components/_button.scss
@@ -13,6 +13,7 @@
   --button-lh: 1.25rem;
   --button-gap: 0.25rem;
 
+  vertical-align: middle;
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -20,6 +21,8 @@
   text-decoration: none;
   font-weight: 500;
   cursor: pointer;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
   color: var(--button-fg-color);
   background-color: var(--button-bg-color);
   border-color: var(--button-border-color);
@@ -41,8 +44,7 @@
   }
 
   &:focus {
-    outline: 2px solid rgb(var(--button-ring-color));
-    outline-offset: 2px;
+    outline-color: rgb(var(--button-ring-color));
   }
 
   &--loading {
@@ -105,6 +107,15 @@
   &--pill {
     border-radius: $rounded-full;
     padding-inline: calc(0.375rem + var(--button-px));
+  }
+
+  // Pill
+  &--readonly {
+    cursor: default;
+
+    &:focus {
+      outline-color: transparent;
+    }
   }
 
   // Loading state
