--- a/packages/ui/src/assets/styles/abstracts/_variables.scss
+++ b/packages/ui/src/assets/styles/abstracts/_variables.scss
@@ -1,24 +1,13 @@
-$font-sans:
-  system-ui,
-  -apple-system,
-  BlinkMacSystemFont,
-  "Segoe UI",
-  Roboto,
-  Oxygen,
-  Ubuntu,
-  Cantarell,
-  "Open Sans",
-  "Helvetica Neue",
-  sans-serif;
-$font-serif: Georgia, "Times New Roman", Times, serif;
-$font-mono: "Courier New", Courier, monospace;
+$font-sans: system-ui !default;
+$font-serif: Georgia, "Times New Roman", Times, serif !default;
+$font-mono: "Courier New", Courier, monospace !default;
 
-$rounded-md: 0.25rem;
-$rounded-full: 9999rem;
+$rounded-md: 0.25rem !default;
+$rounded-full: 9999rem !default;
 
-$color-primary-500: 59 130 246;
+$color-primary-500: 59 130 246 !default;
 
-$color-error-500: 239 68 68;
+$color-error-500: 239 68 68 !default;
 
-$color-gray-300: 203 213 225;
-$color-gray-500: 100 116 139;
+$color-gray-300: 203 213 225 !default;
+$color-gray-500: 100 116 139 !default;
